--- a/Frontend/Emoticoach/src/index.html
+++ b/Frontend/Emoticoach/src/index.html
@@ -22,5 +22,7 @@
 <body>
   <app-root></app-root>
 </body>
-
+<script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB1bSwMFIwAwvpZH6qjo5b31-4-G2_UETA&libraries=places">
+</script>
 </html>
