data generator made but it spans to many api calls

--- a/Frontend/Emoticoach/src/index.html
+++ b/Frontend/Emoticoach/src/index.html
@@ -22,7 +22,7 @@
 <body class="red">
   <app-root></app-root>
 </body>
-<script async defer
+<!-- <script async defer
     src="https://maps.googleapis.com/maps/api/js?key={}&libraries=places">
-</script>
+</script> -->
 </html>
